style: Minor fix, when chats were overflowing scroll was added on whole chatseSection instead of just chats container

--- a/components/ChatsSection/Chat.module.css
+++ b/components/ChatsSection/Chat.module.css
@@ -5,6 +5,10 @@
   padding: 5px;
 }
 
+.chat:hover {
+  background-color: #e3edfa;
+}
+
 .imgContainer {
   position: relative;
 }
