--- a/components/ChatsSection/Chats.module.css
+++ b/components/ChatsSection/Chats.module.css
@@ -1,5 +1,21 @@
 .chats {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
   margin: 10px 5px;
+  overflow: scroll;
+}
+
+.users {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  overflow: scroll;
+}
+
+.chats::-webkit-scrollbar,
+.users::-webkit-scrollbar {
+  display: none;
 }
 
 .user {
@@ -7,6 +23,11 @@
   justify-content: flex-start;
   gap: 10px;
   padding: 5px;
+}
+
+.user:hover {
+  cursor: pointer;
+  background-color: #e3edfa;
 }
 
 .profileImg {
