--- a/components/ChatsSection/ChatsSection.module.css
+++ b/components/ChatsSection/ChatsSection.module.css
@@ -1,13 +1,8 @@
 .card {
   flex-basis: 400px;
   min-width: 300px;
-  display: grid;
-  grid-template-rows: 50px 40px auto;
-  overflow: scroll;
-}
-
-.card::-webkit-scrollbar {
-  display: none;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
